data-app/objects/washer__dlm/fields/SpinSpeed__c.field-meta.xml
<CustomField>
    <fullName>SpinSpeed__c</fullName>
    <label>SpinSpeed</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>SpinSpeed</labelOverride>
        <masterLabel>SpinSpeed</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>