data-app/objects/washer__dlm/fields/VibrationLevel__c.field-meta.xml
<CustomField>
    <fullName>VibrationLevel__c</fullName>
    <label>VibrationLevel</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>VibrationLevel</labelOverride>
        <masterLabel>VibrationLevel</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>