data-app/objects/washer__dlm/fields/WaterUsage__c.field-meta.xml
<CustomField>
    <fullName>WaterUsage__c</fullName>
    <label>WaterUsage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>WaterUsage</labelOverride>
        <masterLabel>WaterUsage</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>